# mesdf

./: .gitignore  README.md  pybind.cpp  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
include/sdf/: sdf.hpp
include/sdf/internal/: sdf_util.hpp
old/: CMakeLists.txt  setup_cmake.py  setup_old.py
old/tools/: pybench.py
src/: pybind.cpp  renderer.cpp  sdf.cpp  util.cpp
tests/: test.py
tools/: pybench.py
